# Seg-Fault-2025

./: CMakeLists.txt  README.md  build_and_test.sh  forth_compiler_docs (1).md  run_forth_tests.py
examples/: basic_c_backend_test.forth  basic_test.forth  conditional.forth  factorial.forth  fibonacci.forth  loop.forth  sum_array.forth  test_abs.forth  test_complex_calc.forth  test_count_down.forth  test_hello.forth  test_string_output.forth  test_variable_constants.forth
src/: main.cpp
src/codegen/: c_backend.cpp  c_backend.h  cpp_codegen.cpp  cpp_codegen.h  llvm_backend.cpp  llvm_backend.h
src/common/: types.h  utils.h
src/dictionary/: dictionary.cpp  dictionary.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: ast.cpp  ast.h  ast_visualizer.h  parser.cpp  parser.h
src/semantic/: analyzer.cpp  analyzer.h
tests/: CMakeLists.txt  test_framework.h  test_main.cpp
tests/codegen/: test_c_backend.cpp  test_cpp_codegen.cpp  test_llvm.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/semantic/: test_analyzer.cpp
